@@ -241,6 +241,7 @@ contains
        
        call glide_calclsrf(instance%model%geometry%thck, &
             instance%model%geometry%topg, &
+            instance%model%climate%eus, &
             instance%model%geometry%lsrf)
        instance%model%geometry%usrf = instance%model%geometry%thck + instance%model%geometry%lsrf
        !instance%first=.false.
